--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -1,21 +1,30 @@
 ﻿@page
 @model AboutModel
 @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Welcome to EABA";
 }
 <html>
 <body>
-    <h2>@ViewData["Title"]</h2>
-    <h3>@Model.Message</h3>
-    <h1>@Model.tester</h1>
+
+    <div>
+        <h2>@ViewData["Title"]</h2>
 
 
-    <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-        <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
-            <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
-        </blockquote>
+        <p>
+            The European Association for Behaviour Analysis (EABA) is an international organisation that aims to promote Behaviour Analysis in Europe and to provide an international forum within Europe for the study and discussion of matters relevant to behavior analysis. One of the main functions of EABA is to organize congresses in experimental and applied behaviour analysis. At present these are held every two years.
+        </p>
+
+        <h3>
+            Full membership of EABA will entitle members to:
+        </h3>
+
+        <ul>
+            <li>Reduced EABA conference registration rates</li>
+            <li>Subscription to the European Journal of Behaviour Analysis</li>
+            <li>Access to our list-server and Newsletter</li>
+            <li>Nomination and voting rights</li>
+        </ul>
     </div>
-
 </body>
 </html>
 
