--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,110 +6,114 @@
 
 <partial name="_Carousel" />
 
-@if (Model.Event.Count > 0)
-{
-    <div class="cont">
-        <div class="container">
-            <div>
-                <h1>Upcoming events</h1>
+<div class="container body-content">
+
+
+    @if (Model.Event.Count > 0)
+    {
+        <div class="cont">
+            <div class="container">
+                <div>
+                    <h1>Upcoming events</h1>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="cart container">
-        @foreach (var item in Model.Event)
-        {
+        <div class="cart container">
+            @foreach (var item in Model.Event)
+            {
 
-            <a asp-page="/Event">
-                <div class="card-size">
-                    <div class="card" style="width: 18rem;">
-                        <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title text-center">Card title</h5>
-                            <p class="card-text">Starts: Date 11:10:2019</p>
+                <a asp-page="/Event">
+                    <div class="card-size">
+                        <div class="card" style="width: 18rem;">
+                            <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Card title</h5>
+                                <p class="card-text">Starts: Date 11:10:2019</p>
+                            </div>
                         </div>
                     </div>
+                </a>
+            }
+        </div>
+    }
+    else
+    {
+        <div class="cont">
+            <div class="container">
+                <div>
+                    <h1>No upcoming events</h1>
                 </div>
-            </a>
-        }
-    </div>
-}
-else
-{
+            </div>
+        </div>
+    }
+
     <div class="cont">
         <div class="container">
             <div>
-                <h1>No upcoming events</h1>
+                <h1>Social media</h1>
             </div>
         </div>
     </div>
-}
 
-<div class="cont">
-    <div class="container">
-        <div>
-            <h1>Social media</h1>
-        </div>
-    </div>
-</div>
-
-<div class="cont">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm ">
-                <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                    <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
-                        <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
-                    </blockquote>
+    <div class="cont">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm ">
+                    <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
+                            <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
+                        </blockquote>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm ">
-                <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                    <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
-                        <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
-                    </blockquote>
+                <div class="col-sm ">
+                    <div class="fb-page" data-href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/" class="fb-xfbml-parse-ignore">
+                            <a href="https://www.facebook.com/European-Association-for-Behaviour-Analysis-144073318974784/">European Association for Behaviour Analysis</a>
+                        </blockquote>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core Razor Pages</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
-        </ul>
+    <div class="row">
+        <div class="col-md-3">
+            <h2>Application uses</h2>
+            <ul>
+                <li>Sample pages using ASP.NET Core Razor Pages</li>
+                <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h2>How to</h2>
+            <ul>
+                <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h2>Overview</h2>
+            <ul>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h2>Run &amp; Deploy</h2>
+            <ul>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
+                <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
+            </ul>
+        </div>
     </div>
 </div>
