--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -8,5 +8,6 @@
     <li class="@ManageAdminPages.ManageUsersNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/ManageUsers">Manage Users</a></li>
     <li class="@ManageAdminPages.ManageEventsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Events/Index">Edit events</a></li>
     <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Grants/Index">Edit Grants</a></li>
+    <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a></li>
     
 </ul>
