--- a/Pages/Boardmembers/Index.cshtml
+++ b/Pages/Boardmembers/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h2>Board of Director Members</h2>
-
+<!--
 <table class="table">
     <thead>
         <tr>
@@ -24,28 +24,32 @@
         </tr>
     </thead>
     <tbody>
+        -->
  @{
         var i = 0;
 }
+<div class="w3-container w3-padding-64 w3-center" id="team">
+<h2>OUR TEAM</h2>
+<p>Meet the team - our office rats:</p>
+
+<div class="w3-row"><br>
+
+</div>
+</div>
 @foreach (var item in Model.BoardMember) {
-   
-        <tr>
-            <td>
-                <!--@Html.DisplayFor(modelItem => item.UserId)-->
-              @Html.DisplayFor(modelItem => Model.UserList[i].UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BoardRole)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-           <!-- <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td> -->
-        </tr>
+
+    <div class="w3-quarter">
+  <!--<img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">-->
+  <div>
+      @Html.DisplayFor(modelItem => item.Image)
+  </div>
+  <h3>
+      @Html.DisplayFor(modelItem => Model.UserList[i].UserName)
+  </h3>
+  <p>
+       @Html.DisplayFor(modelItem => item.BoardRole)
+  </p>
+</div>
         i++;
 }
 
