Breytt Boardmembers migration

--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Create.cshtml
@@ -14,9 +14,9 @@
         <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="BoardMember.UserId" class="control-label"></label>
-                <input asp-for="BoardMember.UserId" class="form-control" />
-                <span asp-validation-for="BoardMember.UserId" class="text-danger"></span>
+                <label asp-for="BoardMember.Name" class="control-label"></label>
+                <input asp-for="BoardMember.Name" class="form-control" />
+                <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BoardMember.BoardRole" class="control-label"></label>
