--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Details.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.BoardMember.UserId)
+            @Html.DisplayNameFor(model => model.BoardMember.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.BoardMember.UserId)
+            @Html.DisplayFor(model => model.BoardMember.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.BoardMember.BoardRole)
