--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BoardMember.Id" />
             <div class="form-group">
-                <label asp-for="BoardMember.UserId" class="control-label"></label>
-                <input asp-for="BoardMember.UserId" class="form-control" />
-                <span asp-validation-for="BoardMember.UserId" class="text-danger"></span>
+                <label asp-for="BoardMember.Name" class="control-label"></label>
+                <input asp-for="BoardMember.Name" class="form-control" />
+                <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BoardMember.BoardRole" class="control-label"></label>
