--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
@@ -14,7 +14,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.BoardMember[0].UserId)
+                @Html.DisplayNameFor(model => model.BoardMember[0].Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BoardMember[0].BoardRole)
@@ -29,7 +29,7 @@
 @foreach (var item in Model.BoardMember) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.UserId)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BoardRole)
