--- a/Pages/Boardmembers/Index.cshtml
+++ b/Pages/Boardmembers/Index.cshtml
@@ -25,9 +25,7 @@
     </thead>
     <tbody>
         -->
- @{
-        var i = 0;
-}
+
 <div class="w3-container w3-padding-64 w3-center" id="team">
 <h2>OUR TEAM</h2>
 <p>Meet the team - our office rats:</p>
@@ -44,13 +42,13 @@
       @Html.DisplayFor(modelItem => item.Image)
   </div>
   <h3>
-      @Html.DisplayFor(modelItem => Model.UserList[i].UserName)
+      @Html.DisplayFor(modelItem => item.Name)
   </h3>
   <p>
        @Html.DisplayFor(modelItem => item.BoardRole)
   </p>
 </div>
-        i++;
+        
 }
 
     </tbody>
