--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" asp-controller="UploadPdf" enctype="multipart/form-data">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -338,9 +338,10 @@
                     <option class="text-danger">Student Member</option>
                 </select>
             </div>
-
-
-
+            <p>Please submit a pdf file of your degree, it is required to become a full member.</p>
+            <div class="form-group">
+                    <input type="file" name="files" multiple />
+                </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
