link og date input fyrir Event :)

--- a/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Create.cshtml
@@ -26,8 +26,23 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Event.text" class="control-label"></label>
-                    <input asp-for="Event.text" class="form-control" />
+                    <input type="text" asp-for="Event.text" class="form-control" />
                     <span asp-validation-for="Event.text" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.eventLink" class="control-label"></label>
+                    <input asp-for="Event.eventLink" class="form-control" />
+                    <span asp-validation-for="Event.eventLink" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.StartDate" class="control-label"></label>
+                    <input type="date" asp-for="Event.StartDate" class="form-control" />
+                    <span asp-validation-for="Event.StartDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Event.date" class="control-label"></label>
+                    <input type="date" asp-for="Event.date" class="form-control" />
+                    <span asp-validation-for="Event.date" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="file" name="files" multiple />
@@ -38,7 +53,7 @@
             </form>
         </div>
     </div>
-    
+
 </div>
 
 
