--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -9,6 +9,6 @@
     <li class="@ManageAdminPages.ManageEventsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Events/Index">Edit events</a></li>
     <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Grants/Index">Edit Grants</a></li>
     <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a></li>
-    <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Votes/Index">Elections</a></li>
+    <li class="@ManageAdminPages.ManageVotesNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Votes/Index">Elections</a></li>
 
 </ul>
