--- a/Areas/Identity/Pages/Account/Admin/Votes/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Votes/Create.cshtml
@@ -3,41 +3,42 @@
 
 @{
     ViewData["Title"] = "Create";
-  Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
-<h4>Vote</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>           
-            <div class="form-group">
-                <label asp-for="Vote.Title" class="control-label"></label>
-                <input asp-for="Vote.Title" class="form-control" />
-                <span asp-validation-for="Vote.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Vote.text" class="control-label"></label>
-                <input asp-for="Vote.text" class="form-control" />
-                <span asp-validation-for="Vote.text" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="file" name="files" multiple />
-            </div>
-            <div class="form-group">
-                <label asp-for="Vote.date" class="control-label"></label>
-                <input asp-for="Vote.date" class="form-control" />
-                <span asp-validation-for="Vote.date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Create Vote</h1>
+        </div>
     </div>
 </div>
+
+<div class="cart container">
+    <div class="row">
+        <div class="col-md-12">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Vote.Title" class="control-label"></label>
+                    <input asp-for="Vote.Title" class="form-control" />
+                    <span asp-validation-for="Vote.Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Vote.text" class="control-label"></label>
+                    <input type="text" asp-for="Vote.text" class="form-control" />
+                    <span asp-validation-for="Vote.text" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+</div>
+
 
 <div>
     <a asp-page="Index">Back to List</a>
