--- a/Areas/Identity/Pages/Account/Admin/Votes/Details.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Votes/Details.cshtml
@@ -6,39 +6,29 @@
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Details</h1>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="cart container">
+    <div class="card mb-3" style="width: 36rem;">
+        <img class="card-img-top" src="~/images/events/@Model.Vote.Image" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">@Model.Vote.Title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <a asp-page="./Edit" asp-route-id="@Model.Vote.Id">Edit</a> |
+            <a asp-page="./Index">Back to List</a>
+        </div>
+    </div>
+</div>
 
 <div>
-    <h4>Vote</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Vote.Title)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Vote.Title)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Vote.text)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Vote.text)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Vote.Image)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Vote.Image)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Vote.date)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Vote.date)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Vote.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
