--- a/Pages/Shared/_footer.cshtml
+++ b/Pages/Shared/_footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<section id="footer">
-        
+    <div class="container">
         <div class="row align-self-center">
             <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5>Conntact Us</h5>
@@ -38,5 +38,5 @@
                 </ul>
             </div>
         </div>
-
+    </div>
 </section>
