--- a/Areas/Identity/Pages/Account/Admin/Grants/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Create.cshtml
@@ -9,7 +9,7 @@
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Create Grant</h1>
+            <h1>Create News</h1>
         </div>
     </div>
 </div>
