--- a/Areas/Identity/Pages/Account/Admin/Grants/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Index.cshtml
@@ -9,10 +9,10 @@
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Create Grant</h1>
+            <h1>Create News</h1>
         </div>
     <p>
-        <a asp-page="Create">Create New Grant</a>
+        <a asp-page="Create">Create News</a>
     </p>
     </div>
 </div>
