--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -6,8 +6,8 @@
     <li class="@ManageAdminPages.IndexNavClass(ViewContext)"><a href="/Identity/Account/Admin/Index">Profile</a></li>
     <li class="@ManageAdminPages.ChangePasswordNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/ChangePassword">Password</a></li>
     <li class="@ManageAdminPages.ManageUsersNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/ManageUsers">Manage Users</a></li>
-    <li class="@ManageAdminPages.ManageEventsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Events/Index">Edit events</a></li>
-    <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Grants/Index">Edit Grants</a></li>
+    <li class="@ManageAdminPages.ManageEventsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Events/Index">Edit Events</a></li>
+    <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Grants/Index">Edit News</a></li>
     <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a></li>
     <li class="@ManageAdminPages.ManageVotesNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Votes/Index">Elections</a></li>
 
