--- a/Areas/Identity/Pages/Account/Admin/Grants/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Delete.cshtml
@@ -10,7 +10,7 @@
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Delete Grant</h1>
+            <h1>Delete News</h1>
             <h3>Are you sure you want to delete this?</h3>
         </div>
     </div>
