--- a/Areas/Identity/Pages/Account/Admin/Grants/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Edit.cshtml
@@ -11,7 +11,7 @@
 <div class="cont">
     <div class="container">
         <div>
-            <h1>Edit Grant</h1>
+            <h1>Edit News</h1>
         </div>
     </div>
 </div>
