--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,13 +8,59 @@
 
 <div class="container body-content">
 
-    <div id="loginContainer">
-        <div class="heading">
-            <div>
-                <h1>News</h1>
+    @if (Model.Grant.Count > 0)
+    {
+        <div id="loginContainer">
+            <div class="heading">
+                <div>
+                    <h1>News</h1>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="cart container">
+            @foreach (var item in Model.Grant)
+            {
+                if (item.Image == "")
+                {
+                    <a asp-page="/News">
+                        <div class="card-size">
+                            <div class="card" style="width: 18rem;">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
+                                    <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                }
+                else
+                {
+                    <a asp-page="/News">
+                        <div class="card-size">
+                            <div class="card" style="width: 18rem;">
+                                <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
+                                    <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                }
+
+            }
+        </div>
+    }
+    else
+    {
+        <div id="headingContainer">
+            <div class="heading">
+                <div>
+                    <h1>No News</h1>
+                </div>
+            </div>
+        </div>
+    }
 
     @if (Model.Event.Count > 0)
     {
@@ -34,8 +80,10 @@
                         <div class="card-size">
                             <div class="card" style="width: 18rem;">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Card title</h5>
-                                    <p class="card-text">Starts: Date 11:10:2019</p>
+                                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
+                                    <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
+                                    <p class="card-text">Starts: @Html.DisplayFor(modelItem => item.StartDate)</p>
+                                    <p class="card-text">Ends: @Html.DisplayFor(modelItem => item.date)</p>
                                 </div>
                             </div>
                         </div>
@@ -48,8 +96,10 @@
                             <div class="card" style="width: 18rem;">
                                 <img class="images card-image-top" src="~/images/events/@Html.DisplayFor(modelItem => item.Image)" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Card title</h5>
-                                    <p class="card-text">Starts: Date 11:10:2019</p>
+                                    <h5 class="card-title text-center">@Html.DisplayFor(modelItem => item.Title)</h5>
+                                    <p class="card-text">@Html.DisplayFor(modelItem => item.text)</p>
+                                    <p class="card-text">Starts: @Html.DisplayFor(modelItem => item.StartDate)</p>
+                                    <p class="card-text">Ends: @Html.DisplayFor(modelItem => item.date)</p>
                                 </div>
                             </div>
                         </div>
