--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
@@ -3,13 +3,20 @@
 
 @{
     ViewData["Title"] = "Index";
+     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+<div class="cont">
+    <div class="container">
+        <div>
+            <h1>Create Boardmember</h1>
+        </div>
+    <p>
+        <a asp-page="Create">Create New BoardMember</a>
+    </p>
+    </div>
+</div>
+<div class="cart container">
 <table class="table">
     <thead>
         <tr>
@@ -46,3 +53,4 @@
 }
     </tbody>
 </table>
+</div>
