--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,11 +9,14 @@
 </head>
 
 <h2 class ="login_header">@ViewData["Title"]</h2>
+<div class="col-sm r">
+                    <img class="logo-cont" alt="Brand" src="~/images/logo.png">
+                </div>
 <div class="row" id="loginContainer">
     <div class="col-md-4">
         <section>
             <form method="post">
-                <h4>Use your account to log in </h4>
+                <h4>Sign in to European Association for Behaviour Analysis </h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
