--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,10 +3,12 @@
 @{
     ViewData["Title"] = "Register";
 }
+<head>
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
+<h2 class="login_header">@ViewData["Title"]</h2>
 
-<h2>@ViewData["Title"]</h2>
-
-<div class="row">
+<div class="row" id="loginContainer">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post" asp-controller="UploadPdf" enctype="multipart/form-data">
             <h4>Create a new account.</h4>
