--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -2,8 +2,34 @@
 {
     display:flex;
     justify-content:center;
+    padding-bottom: 2%;
+}
+.col-sm{
+    display:flex;
+    justify-content:center;
 }
 .login_header{
     display:flex;
     justify-content:center;
+    padding-top:2%;
 }
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0; 
+    font-weight: 14px;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    color: #fff;
+    background-color: #337ab7;
+    border-color:#2e6da4;
+  }
+  .btn:hover{
+    color: #fff;
+    background-color:#1e496d;
+  }
