--- a/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_Layout.cshtml
@@ -1,9 +1,7 @@
-﻿@{ 
+﻿@{
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
-
 <h2>Manage your Admin account</h2>
-
 <div>
     <h4>Change your Admin settings</h4>
     <hr />
@@ -16,7 +14,15 @@
         </div>
     </div>
 </div>
-
 @section Scripts {
     @RenderSection("Scripts", required: false)
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="~/css/footer.css" />
+        <link rel="stylesheet" href="~/css/homePage.css" />
+        <link rel="stylesheet" href="~/css/navBar.css" />
+        <link rel="stylesheet" href="~/css/page.css" />
+        <link rel="stylesheet" href="~/css/header.css" />
+        <link rel="stylesheet" href="~/css/heading.css" />
 }
